export orgchart server side functionality

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -578,6 +578,7 @@ Setting_Description_peopleSearch.detail.form=Specify attributes to show in the d
 Setting_Description_peopleSearch.displayName.cardLabels=Specify the display labels for the user panel in the People Search detail and on the organizational chart views.  You can use LDAP attribute value such as <code>@LDAP\:givenName@</code> macros.
 Setting_Description_peopleSearch.displayName.user=Specify the display name for userDN type records.  Use macros to control the presentation such as the LDAP attribute macro <code>@LDAP\:givenName@</code>.
 Setting_Description_peopleSearch.enable=Enable this option to enable the People Search module.
+Setting_Description_peopleSearch.enableExport=Enable this option to allow download of organizational chart data.
 Setting_Description_peopleSearch.enableOrgChart=Enable this option to show an organizational chart of users.
 Setting_Description_peopleSearch.enablePublic=Enable this option to allow access to the People Search module for unauthenticated users.
 Setting_Description_peopleSearch.idleTimeout=Specify the number of seconds after which an authenticated session becomes unauthenticated.   If the value is set to 0, then @PwmAppName@ uses then the system-wide idle timeout value.  If a user is using the People Search module without authenticating, then the system does not apply a timeout.
@@ -585,6 +586,7 @@ Setting_Description_peopleSearch.maxCacheSeconds=Specify the number of seconds t
 Setting_Description_peopleSearch.orgChart.assistantAttribute=Specify the attribute that contains the LDAP DN of the assistant for a user.  If this setting is blank, @PwmAppName@ will not show the assistant on the organizational chart view.
 Setting_Description_peopleSearch.orgChart.childAttribute=Specify the attribute that contains the LDAP DN of the direct reports for a user.  If this setting is blank, @PwmAppName@ does not show the organizational chart view.
 Setting_Description_peopleSearch.orgChart.parentAttribute=Specify the attribute that contains the LDAP DN of the manager.  If this setting is blank, @PwmAppName@ does not show the organizational chart view.
+Setting_Description_peopleSearch.orgChart.workforceIdAttribute=Specify the attribute that contains the workforce ID of the user.   If this setting is blank, @PwmAppName@  data exports will not contain the workforce ID.
 Setting_Description_peopleSearch.photo.ldapAttribute=Specify the LDAP Attribute to use for a photo. Leave this option blank, if you do not want to display a photo.
 Setting_Description_peopleSearch.photo.queryFilter=Specify an LDAP permission filter to control photo visibility when displaying an organizational chart or detail record view. If a user does not match this permission, @PwmAppName@ does not display the user's photo.
 Setting_Description_peopleSearch.photo.urlOverride=Specify a URL to override the photo. If the LDAP directory does not store the users' photos, this setting can show photos from an external system.  If you specify this setting, @PwmAppName@ does not load the the photo from the LDAP directory.<br/><br/>Example\:<code>http\://photos.example.com/employee/@LDAP\:workforceID@.jpg</code>
@@ -1080,13 +1082,15 @@ Setting_Label_peopleSearch.detail.form=Search Detail Attributes
 Setting_Label_peopleSearch.displayName.cardLabels=Person Detail Display Labels
 Setting_Label_peopleSearch.displayName.user=UserDN Name Display
 Setting_Label_peopleSearch.enable=Enable People Search
+Setting_Label_peopleSearch.enableExport=Enable Export
 Setting_Label_peopleSearch.enableOrgChart=Enable Organizational Chart
 Setting_Label_peopleSearch.enablePublic=Enable People Search Public (Non-Authenticated) Access
 Setting_Label_peopleSearch.idleTimeout=Idle Timeout Seconds
-Setting_Label_peopleSearch.maxCacheSeconds=Search Maximum Cache Seconds
+Setting_Label_peopleSearch.maxCacheSeconds=Maximum Cache Seconds
 Setting_Label_peopleSearch.orgChart.assistantAttribute=Organizational Assistant Attribute
 Setting_Label_peopleSearch.orgChart.childAttribute=Organizational Chart Child Attribute
 Setting_Label_peopleSearch.orgChart.parentAttribute=Organizational Chart Parent Attribute
+Setting_Label_peopleSearch.orgChart.workforceIdAttribute=Organizational Chart Workforce ID Attribute
 Setting_Label_peopleSearch.photo.ldapAttribute=LDAP Photo Attribute
 Setting_Label_peopleSearch.photo.queryFilter=Photo Display Permission
 Setting_Label_peopleSearch.photo.urlOverride=Photo URL Override
