server updates for peoplesearch advanced search

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -574,6 +574,7 @@ Setting_Description_passwordSync.enableReplicaCheck=Enable this option to check 
 Setting_Description_passwordSyncMaxWaitTime=Specify how long, during a password change, the system waits for the password to be synchronized to all configured LDAP servers.  In cases where the synchronization might take an extraordinary amount of time, this setting prevents the page from timing out.<br/><br/>Specify the value in seconds.
 Setting_Description_passwordSyncMinWaitTime=Specify how long, during a password change, the system waits before forwarding the user.  This gives any background synchronization processes time to execute before the user executes the next operation.<br/><br/>Specify the value in seconds.
 Setting_Description_password.wordlist.wordSize=Specify the minimum number of characters in the password that @PwmAppName@ checks against the Word List dictionary. For example, if the password the system checks is "wordlist" and this setting is set to 6, then the combinations "wordli", "wordlis", "wordlist", "ordlis", "ordlist", and "rdlist" are all checked against the configured dictionary. If any of these values are equal to any word in the Word List dictionary, then the system considers the password to match the Word List and rejects it. If this value is set to zero or the password to check is smaller than the value specified here, then the system checks the entire password against the Word List but not any smaller parts of it.
+Setting_Description_peopleSearch.advancedSearch.enable=Enable advanced searching user interface.  Allows users to specify individual attributes for searching.
 Setting_Description_peopleSearch.detail.form=Specify attributes to show in the detail view of an individual person's record.
 Setting_Description_peopleSearch.displayName.cardLabels=Specify the display labels for the user panel in the People Search detail and on the organizational chart views.  You can use LDAP attribute value such as <code>@LDAP\:givenName@</code> macros.
 Setting_Description_peopleSearch.displayName.user=Specify the display name for userDN type records.  Use macros to control the presentation such as the LDAP attribute macro <code>@LDAP\:givenName@</code>.
@@ -594,6 +595,7 @@ Setting_Description_peopleSearch.queryMatch=Define an LDAP directory filter that
 Setting_Description_peopleSearch.result.form=Specify the attributes the People Search module shows in the search results table during searches.
 Setting_Description_peopleSearch.result.limit=Specify the maximum number of records @PwmAppName@ returns while searching.
 Setting_Description_peopleSearch.searchAttributes=Add a list of LDAP attributes to search when generating an automatic search filter for the setting <a data-gotoSettingLink\="peopleSearch.searchFilter">@PwmSettingReference\:peopleSearch.searchFilter@</a>.  @PwmAppName@ also uses it to determine which fields in the user detail form it shows in the "Like" search option.
+Setting_Description_peopleSearch.search.form=Add a list of LDAP attributes to search when generating an automatic search filter for the setting <a data-gotoSettingLink\="peopleSearch.searchFilter">@PwmSettingReference\:peopleSearch.searchFilter@</a>.  @PwmAppName@ also uses it to determine which fields in the user detail form it shows in the "Like" search option.
 Setting_Description_peopleSearch.searchBase=Specify the LDAP search bases for the People Search module. If empty, @PwmAppName@ uses the default LDAP search bases.
 Setting_Description_peopleSearch.searchFilter=Specify the LDAP search filter the People Search module uses to query the directory.  Substitute <i>%USERNAME%</i> for user-supplied user names. If blank, @PwmAppName@ auto-generates the search filter based on the values in the setting <a data-gotoSettingLink\="peopleSearch.searchAttributes">@PwmSettingReference\:peopleSearch.searchAttributes@</a>.\n        <br/><br>\n        Example\: <code>(&(objectClass\=Person)(|(givenName\=*%USERNAME%*)(sn\=*%USERNAME%*)(mail\=*%USERNAME%*)(telephoneNumber\=*%USERNAME%*)))</code>\n\n
 Setting_Description_peopleSearch.useProxy=Enable this option to use the LDAP proxy account to perform searches. For proper security in most environments, do <b>not</b> enable this setting.
@@ -1078,6 +1080,7 @@ Setting_Label_passwordSync.enableReplicaCheck=Password Sync Enable Replication C
 Setting_Label_passwordSyncMaxWaitTime=Password Change Maximum Wait Time
 Setting_Label_passwordSyncMinWaitTime=Password Change Minimum Wait Time
 Setting_Label_password.wordlist.wordSize=Word List Word Size Check
+Setting_Label_peopleSearch.advancedSearch.enable=Enable Advanced Search
 Setting_Label_peopleSearch.detail.form=Search Detail Attributes
 Setting_Label_peopleSearch.displayName.cardLabels=Person Detail Display Labels
 Setting_Label_peopleSearch.displayName.user=UserDN Name Display
@@ -1098,6 +1101,7 @@ Setting_Label_peopleSearch.queryMatch=Permitted Users
 Setting_Label_peopleSearch.result.form=Search Result Attributes
 Setting_Label_peopleSearch.result.limit=Search Result Limit
 Setting_Label_peopleSearch.searchAttributes=Search Attributes
+Setting_Label_peopleSearch.search.form=Search Attributes
 Setting_Label_peopleSearch.searchBase=LDAP Search base
 Setting_Label_peopleSearch.searchFilter=People Search LDAP Filter
 Setting_Label_peopleSearch.useProxy=Use Proxy Account
