helpdesk adv search server impl

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -383,6 +383,7 @@ Setting_Description_guest.maxValidDays=Specify the maximum number of days before
 Setting_Description_guest.update.form=Specify the attributes and fields to update the New Guest form creation.
 Setting_Description_guest.writeAttributes=Add actions @PwmAppName@ performs after it creates a guest user.  You can use macros.
 Setting_Description_helpdesk.actions=Add actions available to the Help Desk actor.  You can use macros.
+Setting_Description_helpdesk.advancedSearch.enable=Enable advanced searching user interface.  Allows operators to specify individual attributes for searching.
 Setting_Description_helpdesk.clearOtp.button=Eanble this option to allow the Help Desk operator to clear out a user's stored one-time password settings by clicking a button.
 Setting_Description_helpdesk.clearResponses=Enable this option to allow the Help Desk operator to clear out a user's stored responses after changing the user's password.
 Setting_Description_helpdesk.clearResponses.button=Enable this option to allow the Help Desk operator to clear out a user's stored responses by clicking a button.
@@ -394,7 +395,7 @@ Setting_Description_helpdesk.enable=Enable this option to enable the Help Desk m
 Setting_Description_helpdesk.enablePhotos=Enable photos in helpdesk search screen 
 Setting_Description_helpdesk.enableUnlock=Enable this option to enable the Help Desk module users to unlock an (intruder) locked account.
 Setting_Description_helpdesk.enforcePasswordPolicy=Enable this option to require that the passwords set by Help Desk must meet the same password policy that normally constrains the user.
-Setting_Description_helpdesk.filter=Specify the LDAP search filter to query the directory.  Substitute <i>%USERNAME%</i> for user supplied user name.  If not specified, @PwmAppName@ auto calculates a search filter based on the Help Desk Search Form.<p>Examples<ul><li>Edirectory\: <code>(&(objectClass\=Person)(|((cn\=*%USERNAME%*)(uid\=*%USERNAME%*)(givenName\=*%USERNAME%*)(sn\=*%USERNAME%*))))</code></li><li>Active Directory\: <code>(&(objectClass\=Person)(|((cn\=*%USERNAME%*)(uid\=*%USERNAME%*)(sAMAccountName\=*%USERNAME%*)(userprincipalname\=*%USERNAME%*)(givenName\=*%USERNAME%*)(sn\=*%USERNAME%*))))</code></li></ul>
+Setting_Description_helpdesk.filter=Specify the LDAP search filter to query the directory.  Substitute <i>%USERNAME%</i> for user supplied user name.  If not specified, @PwmAppName@ auto calculates a search filter based on the Help Desk Search Results.<p>Examples<ul><li>Edirectory\: <code>(&(objectClass\=Person)(|((cn\=*%USERNAME%*)(uid\=*%USERNAME%*)(givenName\=*%USERNAME%*)(sn\=*%USERNAME%*))))</code></li><li>Active Directory\: <code>(&(objectClass\=Person)(|((cn\=*%USERNAME%*)(uid\=*%USERNAME%*)(sAMAccountName\=*%USERNAME%*)(userprincipalname\=*%USERNAME%*)(givenName\=*%USERNAME%*)(sn\=*%USERNAME%*))))</code></li></ul>
 Setting_Description_helpdesk.forcePwExpiration=Enable this option to force the system to expire the password for the users when the help desk operator sets a user's password.
 Setting_Description_helpdesk.idleTimeout=Specify the number of seconds after which @PwmAppName@ unauthenticates an authenticated session.   @PwmAppName@ sets the session idle timeout to this value after a user successfully accesses the Help Desk module.
 Setting_Description_helpdesk.otp.verify=Enable this option to enable the OTP Verification.
@@ -404,6 +405,7 @@ Setting_Description_helpdesk.result.form=Add the fields @PwmAppName@ shows as a 
 Setting_Description_helpdesk.result.limit=Specify a limit of the results of help desk searches.
 Setting_Description_helpdesk.searchBase=Specify one or more LDAP search bases. If empty, @PwmAppName@ uses the default LDAP search base.
 Setting_Description_helpdesk.search.filters=Specify a filter to limit the help desk search.
+Setting_Description_helpdesk.search.form=Specify the attributes used in searching.
 Setting_Description_helpdesk.sendPassword=Enable this option to send the password to the user using the method selected under <code>@PwmSettingReference\:recovery.sendNewPassword.sendMethod@</code>.
 Setting_Description_helpdesk.setPassword.maskValue=Enable this option to have @PwmAppName@ mask the password for a user when they are entering it.
 Setting_Description_helpdesk.setPassword.mode=Select the mode to allow Help Desk administrators to set passwords.  (Note the logged-in user must have the proper LDAP permissions.)
@@ -889,6 +891,7 @@ Setting_Label_guest.maxValidDays=Maximum Duration of Account Validity
 Setting_Label_guest.update.form=Update Guest Form
 Setting_Label_guest.writeAttributes=Guest Creation Actions
 Setting_Label_helpdesk.actions=Help Desk Actor Actions
+Setting_Label_helpdesk.advancedSearch.enable=Enable Advanced Search
 Setting_Label_helpdesk.clearOtp.button=Enable Clear One Time Password Settings Button
 Setting_Label_helpdesk.clearResponses.button=Enable Clear Responses Button
 Setting_Label_helpdesk.clearResponses=Clear Responses on Password Set
@@ -906,10 +909,11 @@ Setting_Label_helpdesk.idleTimeout=Idle Timeout Seconds for Help Desk Users
 Setting_Label_helpdesk.otp.verify=Enable OTP Verification Button
 Setting_Label_helpdesk.profile.list=Help Desk Profile
 Setting_Label_helpdesk.queryMatch=Help Desk Profile Match
-Setting_Label_helpdesk.result.form=Help Desk Search Form
+Setting_Label_helpdesk.result.form=Help Desk Search Results
 Setting_Label_helpdesk.result.limit=Help Desk Search Result Limit
 Setting_Label_helpdesk.searchBase=LDAP Search Base
 Setting_Label_helpdesk.search.filters=Help Desk Profile Search Filter
+Setting_Label_helpdesk.search.form=Help Desk Search Attributes
 Setting_Label_helpdesk.sendPassword=Send Password to User
 Setting_Label_helpdesk.setPassword.maskValue=Mask Password Value
 Setting_Label_helpdesk.setPassword.mode=Set Password UI Mode
