Introduced buttons for exporting the orgchart, and sending an email to the team.

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -8,7 +8,8 @@
   "Button_CloseWindow": "Close Window",
   "Button_Confirm": "Confirm",
   "Button_Delete": "Delete",
-  "Button_Email": "Email",
+  "Button_EmailTeam": "Email Team",
+  "Button_ExportOrgChart": "Export Organizational Chart",
   "Button_GoBack": "Go Back",
   "Button_HelpdeskClearOtpSecret": "Clear OTP Secret",
   "Button_More": "More",
