Added an icon to kick off printing the org chart.

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -65,6 +65,7 @@
   "Title_Management": "Management",
   "Title_Organization": "Organization",
   "Title_OrgChart": "Organizational Chart",
+  "Title_Print": "Print",
   "Title_PasswordPolicy": "Password Policy",
   "Title_PeopleSearch": "People Search",
   "Title_PeopleSearchCard": "People Search Cards",
