--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -8,7 +8,7 @@
   "Button_CloseWindow": "Close Window",
   "Button_Confirm": "Confirm",
   "Button_Delete": "Delete",
-  "Button_EmailTeam": "Email Team",
+  "Button_SendEmail": "Send Email",
   "Button_Export": "Export",
   "Button_Email": "Email",
   "Button_ExportOrgChart": "Export Organizational Chart",
@@ -51,9 +51,9 @@
   "Field_Profile": "Profile",
   "Field_Username": "User Name",
   "Long_Title_VerificationSend": "Before this user can be selected, the user's identity must be verified.  Please select a verification method.",
-  "Instructions_ExportOrgChart1": "After you export the organizational chart, you can import the data into a program like Visio so it can be formatted into a viewable form.",
+  "Instructions_ExportOrgChart1": "Click the Export button to begin download of the organizational chart data. After download is complete, you can import the data into a program like Visio so it can be formatted into the desired output.",
   "Instructions_ExportOrgChart2": "Choose the export level depth, and press the Export button below.",
-  "Instructions_EmailTeam1": "An email list will be generated based off the organizational chart starting at this point. Your default email program should automatically open, with the email addresses pre-filled.",
+  "Instructions_EmailTeam1": "The email list is generated based off of organizational data starting at this point. When you click the Send Email button, your default email program should automatically open, with the list of email addresses pre-filled.",
   "Instructions_EmailTeam2": "Choose the team level depth, and press the Email button below.",
   "Placeholder_Search": "Search",
   "Title_AdvancedSearch": "Advanced Search",
@@ -81,5 +81,7 @@
   "Title_ExportOrgChart": "Export Organizational Chart",
   "Title_EmailOrgChart": "Email Team Members",
   "Label_ExportLevelDepth": "Export Level Depth",
-  "Label_EmailLevelDepth": "Team Level Depth"
+  "Label_EmailLevelDepth": "Team Level Depth",
+  "Label_EmailTeamMembersFound": "Email Addresses Found",
+  "Label_StartingFrom": "starting from {{personName}}"
 }
