support for reading language attribute

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -476,6 +476,7 @@ Setting_Description_ldap.serverUrls=Add a list of LDAP servers in URL format tha
 Setting_Description_ldap.testuser.username=Specify the fully qualified DN of an LDAP test user that @PwmAppName@ uses to test functionality and for access to the LDAP directory. Configure this user similar to a normal user account with normal access privileges. @PwmAppName@ periodically uses this account to perform a health check, including changing the password of the account. <br/><br/><b>Using a test user account greatly increases the system's ability to detect and alert configuration and health issues.</b><br/><br/>@PwmAppName@ tests the following functionality (if enabled) using the test user account.<ul><li>Authentication</li><li>Password policy reading</li><li>Set password</li><li>Set Challenge/Responses</li><li>Load Challenge/Responses</li></ul>
 Setting_Description_ldap.user.group.attribute=Specify an attribute on the user entry that references group entries.  The value of this attribute in the directory must be a LDAP DN.
 Setting_Description_ldap.user.language.attribute=Attribute that contains the language of the user in RFC1766 format. (The same format used by web browsers and the HTTP Accept-Language header.)  This value is used only for user interactions when the user does not have an active web session such as an email notification.
+Setting_Description_ldap.user.language.autoSet=When enabled, the user's effective locale for a web session will be written to the LDAP language attribute. 
 Setting_Description_ldap.username.attr=Specify the attribute @PwmAppName@ uses for the user name. If blank, @PwmAppName@ uses the LDAP Naming Attribute.  This option allows fields that display or store the <b>User Name</b> or <b>User ID</b> of a user to show something other then the LDAP Naming Attribute if appropriate.  This value must be unique for this system.
 Setting_Description_ldap.usernameSearchFilter=Specify an LDAP search filter @PwmAppName@ uses for contextless login and other functions to find users in LDAP using user names.  Replace the value <b>%USERNAME%</b> with the actual user name value.
 Setting_Description_ldap.wireTrace.enable=Enable this option to have @PwmAppName@ output all LDAP traffic to the TRACE logging level.<br/><br/><b>WARNING\:</b> enabling this option might allow @PwmAppName@ to write user passwords and other sensitive data to the log files.
@@ -986,6 +987,7 @@ Setting_Label_ldap.serverUrls=LDAP URLs
 Setting_Label_ldap.testuser.username=LDAP Test User
 Setting_Label_ldap.user.group.attribute=User Group Attribute
 Setting_Label_ldap.user.language.attribute=User Language Attribute
+Setting_Label_ldap.user.language.autoSet=Auto Set User Language Attribute
 Setting_Label_ldap.username.attr=Attribute to use for User Name
 Setting_Label_ldap.usernameSearchFilter=User Name Search Filter
 Setting_Label_ldap.wireTrace.enable=Enable LDAP Wire Trace
