--- a/server/src/main/resources/password/pwm/i18n/Error.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error.properties
@@ -164,7 +164,8 @@ Error_FileTypeIncorrect=The file type is not correct.
 Error_FileTooLarge=The file is too large.
 Error_ClusterServiceError=An error occurred with the cluster service: %1%.   Check the log files for more information.
 Error_RemoteErrorValue=Remote Error: %1%
-Error_WordlistImportError=An error occured importing the wordlist: %1%
+Error_WordlistImportError=An error occurred importing the wordlist: %1%
+Error_PwNotifyServiceError=An error occurred while running the password notify service: %1%
 
 Error_ConfigUploadSuccess=File uploaded successfully
 Error_ConfigUploadFailure=File failed to upload.
