Reworked the verifications dialog to provide more flexibility when dealing with token verifications.  Also fixed issues with being shown verification options that don't apply to the user (can't send an email if the user doesn't have an email address, etc.).

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -17,6 +17,8 @@
   "Button_More": "More",
   "Button_OK": "OK",
   "Button_OTP": "OTP",
+  "Button_TokenVerification": "Token Verification",
+  "Button_SendToken": "Send Token",
   "Button_Remove": "Remove",
   "Button_Show": "Show",
   "Button_SMS": "SMS",
@@ -42,6 +44,8 @@
   "Display_StrengthMeter": "Password Strength",
   "Display_TokenDestination": "Token Destination",
   "Display_ViewDetails": "View Details",
+  "Display_EmailPrefix": "Email - ",
+  "Display_SmsPrefix": "SMS - ",
   "Field_DateTime": "Date/Time",
   "Field_Display": "Display",
   "Field_LdapProfile": "LDAP Profile",
