--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -46,6 +46,7 @@
   "Display_ViewDetails": "View Details",
   "Display_EmailPrefix": "Email - ",
   "Display_SmsPrefix": "SMS - ",
+  "Display_PeopleSearch": "Please type your search query below.  You may search for a person based on name, email address or telephone number.",
   "Field_DateTime": "Date/Time",
   "Field_Display": "Display",
   "Field_LdapProfile": "LDAP Profile",
