change reporting setting filter to user permission

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -655,6 +655,7 @@ Setting_Description_reporting.job.intensity=Control the level of intensity of a 
 Setting_Description_reporting.job.timeOffset=Specify the number of seconds past midnight (GMT) when @PwmAppName@ processes the update job.  Setting this option to -1 disables the nightly job processor.
 Setting_Description_reporting.ldap.maxQuerySize=Specify the maximum number of records read during a reporting query search.  Setting this value to a larger sizes requires more Java heap memory.
 Setting_Description_reporting.ldap.searchFilter=Add an LDAP search filter @PwmAppName@ uses when running a reporting job.  If blank @PwmAppName@ auto-generates a filter based on the login query setting.
+Setting_Description_reporting.ldap.userMatch=Select users to include in the reporting job.
 Setting_Description_reporting.maxCacheAge=Specify the maximum age of a cached report record before @PwmAppName@ discards it.  @PwmAppName@ periodically purges records older than this age from the local report data cache.  @PwmAppName@ does this so that the deleted records that it deletes from the LDAP directory are eventually removed from the report cache.  The default value of 2592000 seconds is equal to 30 days.<br/><br/>Specify the value in seconds.
 Setting_Description_reporting.summary.dayValues=Specify day intervals to include in report summary data.
 Setting_Description_response.hashMethod=<p>Select the method of hashing @PwmAppName@ uses to store responses.  Storing the responses as plaintext might facilitate synchronization or migration to other systems but is not secure.</p><p>This setting only controls how @PwmAppName@ writes the responses. @PwmAppName@ can always read stored responses in other formats. @PwmAppName@ cannot convert existing responses until a user re-saves their responses. You can use the reporting engine to identify and count the hash types in use.</p>
@@ -1171,6 +1172,7 @@ Setting_Label_reporting.job.intensity=Reporting Job Intensity
 Setting_Label_reporting.job.timeOffset=Reporting Job Time Offset
 Setting_Label_reporting.ldap.maxQuerySize=Maximum LDAP Query Size
 Setting_Label_reporting.ldap.searchFilter=Reporting Search Filter
+Setting_Label_reporting.ldap.userMatch=Reporting User Match
 Setting_Label_reporting.maxCacheAge=Maximum Cache Age
 Setting_Label_reporting.summary.dayValues=Reporting Summary Day Intervals
 Setting_Label_response.hashMethod=Responses Storage Hashing Method
