Fixed a missing translated string

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -12,6 +12,7 @@
   "Button_Export": "Export",
   "Button_Email": "Email",
   "Button_ExportOrgChart": "Export Organizational Chart",
+  "Button_EmailTeam": "Email Team Members",
   "Button_GoBack": "Go Back",
   "Button_HelpdeskClearOtpSecret": "Clear OTP Secret",
   "Button_More": "More",
