Fixed a problem where the page title area was getting too scrunched.

--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -297,6 +297,7 @@ Title_AnsweredQuestions=Answered Questions
 Title_ActivateUser=Activate Account
 Title_Admin=Administration
 Title_Application=Self Service Password Reset
+Title_Application_Abbrev=SSPR
 Title_Captcha=Verification
 Title_ChangePassword=Change Password
 Title_ConfirmResponses=Confirm Security Questions
